build: updated workflow for 1.16