@@ -49,7 +49,7 @@ public class ObservableListChangeEventImpl<E> implements ObservableListChangeEve
         if (replaced == null) {
             replaced = allChanged.stream()
                     .filter(ChangeEntry::wasReplaced)
-                    .toList();
+                    .collect(Collectors.toList());
         }
         return replaced;
     }
@@ -58,7 +58,17 @@ public class ObservableListChangeEventImpl<E> implements ObservableListChangeEve
         return new Builder<>();
     }
 
-    public record ChangeEntryImpl<E>(int index, E oldValue, E newValue) implements ChangeEntry<E> {
+    private static class ChangeEntryImpl<E> implements ChangeEntry<E> {
+        private final int index;
+        private final E oldValue;
+        private final E newValue;
+
+        private ChangeEntryImpl(int index, E oldValue, E newValue) {
+            this.index = index;
+            this.oldValue = oldValue;
+            this.newValue = newValue;
+        }
+
         public int getIndex() {
             return index;
         }
@@ -72,7 +82,15 @@ public class ObservableListChangeEventImpl<E> implements ObservableListChangeEve
         }
     }
 
-    public record SimpleChangeEntryImpl<E>(int index, E value) implements SimpleChangeEntry<E> {
+    private static class SimpleChangeEntryImpl<E> implements SimpleChangeEntry<E> {
+        private final int index;
+        private final E value;
+
+        private SimpleChangeEntryImpl(int index, E value) {
+            this.index = index;
+            this.value = value;
+        }
+
         public int getIndex() {
             return index;
         }
